fix(page): truncate of toolbar-title

--- a/src/kirby/components/page/page.component.scss
+++ b/src/kirby/components/page/page.component.scss
@@ -22,6 +22,13 @@ ion-toolbar {
   ion-buttons[slot='secondary'] {
     order: 6;
   }
+
+  * {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    pointer-events: auto;
+    overflow: hidden;
+  }
 }
 
 ion-title {
